# ace-bot

./: .gitignore  .sops.yaml  Cargo.toml  bot.nix  flake.nix  shell.nix
ace-bot/: Cargo.toml
ace-bot-matrix/: Cargo.toml
ace-bot-matrix/src/: main.rs
ace-bot-telegram/: Cargo.toml
ace-bot-telegram/src/: main.rs
ace-bot/src/: lib.rs  pastebin.rs
bot/: Cargo.toml
bot/src/: main.rs
modules/services/: ace-bot.nix
nixos/: ace-bot.nix
secrets/: main.yaml
src/: main.rs
victim/: default.nix
victim/secrets/: main.yaml
