[package]
name = "ace-bot-matrix"
version = "0.1.0"
edition = "2024"

[dependencies]
ace-bot = { path = "../ace-bot" }
matrix-sdk.workspace = true
clap.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
futures.workspace = true
