[package]
name = "ace-bot-telegram"
version = "0.1.0"
edition = "2024"

[dependencies]
ace-bot = { path = "../ace-bot" }
teloxide.workspace = true
clap.workspace = true
tokio.workspace = true
regex.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
reqwest.workspace = true
