[package]
name = "ace-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = [ "cargo", "derive" ] }
tokio = { version = "*", features = [ "process", "fs" ] }
log = "*"
thiserror = "*"
reqwest = { version = "*", features = ["multipart"] }
maplit = "*"
