[package]
name = "ace-bot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "*"
mktemp = "*"
users = "*"
clap.workspace = true
tokio.workspace = true
log.workspace = true
thiserror.workspace = true
reqwest.workspace = true
