[package]
name = "ace-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "*", features = [ "macros", "auto-send" ] }
tokio = { version = "*", features = [ "macros", "rt-multi-thread", "process" ] }
log = "*"
pretty_env_logger = "*"
thiserror = "*"
once_cell = "*"
